# auth

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  flake.nix  readme.md  shell.nix  sqlx-data.json
scripts/: postgres-schema.sql  postgres-seeddata.sql  start_db.sh
src/: main.rs
src/endpoints/: create_token.rs  mod.rs  verify_token.rs
src/token_auth/: mod.rs  token.rs
