[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_firebase_auth = "0.2.4"
ormx = { version = "0.10.0", features = ["postgres"] }
tokio = { version = "1.23.0", features = ["full"] }
dotenv = "0.15"
chrono = "0.4"
rand = { version = "0.8.5", features = ["std_rng"] }
base64 = "0.20.0"
openssl = "*"
openssl-probe = "*"
ring = "0.16.20"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls", "chrono", "offline"]